force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Contact_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Contact_Display_Field__c</fullName>
    <description>This field is used internally to generate the &quot;Duplicate Record&quot; field.  It generates display text for a contact including the full name linked to the contact and the account name (if there is one) linked to the account.</description>
    <formula>HYPERLINK( &apos;/&apos; &amp; CRMfusionDBR101__Contact__c, CRMfusionDBR101__Contact__r.FirstName &amp; IF( NOT( ISBLANK( CRMfusionDBR101__Contact__r.FirstName ) ), &apos; &apos;, &apos;&apos; ) &amp; CRMfusionDBR101__Contact__r.LastName, &apos;_self&apos;) &amp; IF( AND( NOT( ISBLANK( CRMfusionDBR101__Contact__r.AccountId ) ), NOT( ISNULL( CRMfusionDBR101__Contact__r.AccountId ) ) ), &apos; at &apos; &amp; HYPERLINK( &apos;/&apos; &amp; CRMfusionDBR101__Contact__r.AccountId, CRMfusionDBR101__Contact__r.Account.Name, &apos;_self&apos; ), &apos;&apos; )</formula>
    <inlineHelpText>The full name and account name of the potential duplicate contact.</inlineHelpText>
    <label>Contact Display Field</label>
    <type>Text</type>
</CustomField>