force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Email__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Email__c</fullName>
    <formula>CASE(  CRMfusionDBR101__Object_Type__c, &apos;Contact&apos;,  CRMfusionDBR101__Contact__r.Email, &apos;Lead&apos;,  CRMfusionDBR101__Lead__r.Email, &apos;&apos; )</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>