force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Lead__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Potential_Duplicates</relationshipName>
    <type>Lookup</type>
</CustomField>