force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__Lead_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Lead_Display_Field__c</fullName>
    <description>This field is used internally to generate the &quot;Duplicate Record&quot; field.  It generates display text for a lead including the full name and the company name (if there is one) linked to the lead.</description>
    <formula>HYPERLINK( &apos;/&apos; &amp;  CRMfusionDBR101__Lead__c,  CRMfusionDBR101__Lead__r.FirstName &amp; IF( NOT( ISBLANK( CRMfusionDBR101__Lead__r.FirstName ) ), &apos; &apos;, &apos;&apos; ) &amp; CRMfusionDBR101__Lead__r.LastName &amp; IF( NOT( ISBLANK( CRMfusionDBR101__Lead__r.Company ) ), &apos; at &apos; &amp; CRMfusionDBR101__Lead__r.Company, &apos;&apos; ), &apos;_self&apos; )</formula>
    <inlineHelpText>The full name and company name of the potential duplicate lead.</inlineHelpText>
    <label>Lead Display Field</label>
    <type>Text</type>
</CustomField>