force-app/main/default/objects/CRMfusionDBR101__Potential_Duplicate__c/fields/CRMfusionDBR101__WarningId_ObjectId__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__WarningId_ObjectId__c</fullName>
    <externalId>true</externalId>
    <label>Warning/Object Link</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>